force-app/main/default/objects/Flow__c/Flow__c.object-meta.xml
<CustomObject>
    <label>Flow</label>
    <nameField>
        <displayFormat>F-{YYYY}/{MM}/{DD}-{0}</displayFormat>
        <label>Flow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>