force-app/main/default/objects/Flow__c/fields/Asana_Task__c.field-meta.xml
<CustomField>
    <fullName>Asana_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asana Task</label>
    <referenceTo>Asana_Task_Muse__c</referenceTo>
    <relationshipLabel>Flow</relationshipLabel>
    <relationshipName>Asana_Task</relationshipName>
    <type>Lookup</type>
</CustomField>