force-app/main/default/objects/Flow__c/fields/Cycle_Time_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Time_Weekdays__c</fullName>
    <formula>IF( Most_Recent_Step__r.Terminal_Stage__c ,
   Handle_Time_To_Current_Step_Weekdays__c ,
  Handle_Time_To_Current_Step_Weekdays__c +  Most_Recent_Step__r.HandleTimeWeekdays__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Time (weekdays)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>