force-app/main/default/objects/Flow__c/fields/Days_Open_Since_Creation__c.field-meta.xml
<CustomField>
    <fullName>Days_Open_Since_Creation__c</fullName>
    <formula>(Flow_Completion_Date_or_NOW__c -  FlowCreatedDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open Since Creation</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>