force-app/main/default/objects/Flow__c/fields/Days_to_first_Step__c.field-meta.xml
<CustomField>
    <fullName>Days_to_first_Step__c</fullName>
    <description>Time from start of process to first Step change (in days)</description>
    <formula>FirstStepOrNOW__c - FlowCreatedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time from start of process to first Step change (in days)</inlineHelpText>
    <label>Response Time (days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>