force-app/main/default/objects/Flow__c/fields/Days_to_first_Step_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Days_to_first_Step_Weekdays__c</fullName>
    <description>Time from start of process to first Step change (in weekdays). Note that weekday calculations round up to the nearest whole day</description>
    <formula>(5 * ( FLOOR( ( DATEVALUE(FirstStepOrNOW__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(FirstStepOrNOW__c) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE(FlowCreatedDate__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(FlowCreatedDate__c) - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time from start of process to first Step change (in weekdays). Note that weekday calculations round up to the nearest whole day</inlineHelpText>
    <label>Response Time (weekdays)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>