force-app/main/default/objects/Flow__c/fields/First_Step_Taken_at__c.field-meta.xml
<CustomField>
    <fullName>First_Step_Taken_at__c</fullName>
    <label>First Step Taken At</label>
    <summarizedField>Step__c.EndingTS__c</summarizedField>
    <summaryForeignKey>Step__c.Flow__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>