force-app/main/default/objects/Flow__c/fields/First_Step_Taken_at_or_NOW__c.field-meta.xml
<CustomField>
    <fullName>First_Step_Taken_at_or_NOW__c</fullName>
    <description>Used in other formulas for error handling</description>
    <formula>IF(ISBLANK( First_Step_Taken_at__c ), NOW(), First_Step_Taken_at__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Step Taken At or NOW</label>
    <type>DateTime</type>
</CustomField>