force-app/main/default/objects/Flow__c/fields/Flow_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Flow_Completion_Date__c</fullName>
    <inlineHelpText>Latest date a terminal Step was reached</inlineHelpText>
    <label>Flow Completion Date</label>
    <summarizedField>Step__c.InitialTS__c</summarizedField>
    <summaryFilterItems>
        <field>Step__c.Terminal_Stage__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Step__c.Flow__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>