force-app/main/default/objects/Flow__c/fields/Flow_Completion_Date_or_NOW__c.field-meta.xml
<CustomField>
    <fullName>Flow_Completion_Date_or_NOW__c</fullName>
    <formula>IF(ISBLANK( Flow_Completion_Date__c ), NOW(), Flow_Completion_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow Completion Date or NOW</label>
    <type>DateTime</type>
</CustomField>