force-app/main/default/objects/Flow__c/fields/Flow_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Flow_Creation_Date__c</fullName>
    <label>Flow Creation Date</label>
    <summarizedField>Step__c.InitialTS__c</summarizedField>
    <summaryForeignKey>Step__c.Flow__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>