force-app/main/default/objects/Flow__c/fields/FlowCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>FlowCreatedDate__c</fullName>
    <description>Flow creation date is editable. Created isnt. This favors the former but defaults to the latter.</description>
    <formula>IF(ISBLANK(Flow_Creation_Date__c),  CreatedDate, Flow_Creation_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow Creation Date or CREATED</label>
    <type>DateTime</type>
</CustomField>