force-app/main/default/objects/Flow__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goal Flow</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value must be of &quot;Goal&quot; Record Type</errorMessage>
        <filterItems>
            <field>Flow__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Goal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Flow__c</referenceTo>
    <relationshipLabel>Tracker Flows with this Goal Flow</relationshipLabel>
    <relationshipName>Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>