force-app/main/default/objects/Flow__c/fields/Goal_Total_Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>Goal_Total_Handle_Time__c</fullName>
    <inlineHelpText>Total time your process should take. This field is expressed in the Units used on the Goal object</inlineHelpText>
    <label>Goal Cycle Time</label>
    <summarizedField>Step__c.Goal_Field_Change_Handle_Time_Hrs__c</summarizedField>
    <summaryForeignKey>Step__c.Flow__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>