force-app/main/default/objects/Flow__c/fields/GoalCycleTime__c.field-meta.xml
<CustomField>
    <fullName>GoalCycleTime__c</fullName>
    <inlineHelpText>Total time your process should take. This field is expressed in the Units used on the Goal object</inlineHelpText>
    <label>Goal Cycle Time</label>
    <summarizedField>Step__c.GoalHandleTimeHrs__c</summarizedField>
    <summaryForeignKey>Step__c.Flow__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>