force-app/main/default/objects/Flow__c/fields/Handle_Time_To_Current_Step_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Handle_Time_To_Current_Step_Weekdays__c</fullName>
    <label>Handle Time To Current Step (weekdays)</label>
    <summarizedField>Step__c.Final_Handle_Time_Weekdays__c</summarizedField>
    <summaryForeignKey>Step__c.Flow__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>