force-app/main/default/objects/Flow__c/fields/Handle_Time_vs_Goal__c.field-meta.xml
<CustomField>
    <fullName>Handle_Time_vs_Goal__c</fullName>
    <formula>CASE(TEXT(Most_Recent_Step__r.GoalUnit__c),
  &quot;Hours&quot;, Total_Handle_Time__c * 24,
  &quot;Days&quot;, Total_Handle_Time__c,
  &quot;Weekdays&quot;, Cycle_Time_Weekdays__c,
  NULL
) / IF(Goal__r.GoalCycleTime__c = 0, NULL, Goal__r.GoalCycleTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Total time spent in this process as compared with the goal for cycle time</inlineHelpText>
    <label>Cycle Time vs Goal</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>