force-app/main/default/objects/Flow__c/fields/HandleTimeToCurrent__c.field-meta.xml
<CustomField>
    <fullName>HandleTimeToCurrent__c</fullName>
    <label>Handle Time To Current Step</label>
    <summarizedField>Step__c.Final_Handle_Time__c</summarizedField>
    <summaryForeignKey>Step__c.Flow__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>