force-app/main/default/objects/Flow__c/fields/Hours_to_First_Step__c.field-meta.xml
<CustomField>
    <fullName>Hours_to_First_Step__c</fullName>
    <formula>Days_to_first_Step__c * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time (hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>