force-app/main/default/objects/Flow__c/fields/Match_Goal_with_Flows__c.field-meta.xml
<CustomField>
    <fullName>Match_Goal_with_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this checkbox to connect this goal to any flows that match (same tracked Object &amp; Field, and if provided, Type).</inlineHelpText>
    <label>Match Goal with Historical Trackers?</label>
    <type>Checkbox</type>
</CustomField>