force-app/main/default/objects/Flow__c/fields/Most_Recent_Step__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Step</label>
    <referenceTo>Step__c</referenceTo>
    <relationshipLabel>Flows</relationshipLabel>
    <relationshipName>Steps4</relationshipName>
    <type>Lookup</type>
</CustomField>