force-app/main/default/objects/Flow__c/fields/Name_of_Tracked_Record__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Tracked_Record__c</fullName>
    <label>Name of Tracked Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>