force-app/main/default/objects/Flow__c/fields/Next_Breach_At__c.field-meta.xml
<CustomField>
    <fullName>Next_Breach_At__c</fullName>
    <formula>Most_Recent_Step__r.BreachTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The time the current Step will Breach its goal at</inlineHelpText>
    <label>Next Breach At</label>
    <type>DateTime</type>
</CustomField>