force-app/main/default/objects/Flow__c/fields/Progress_Bar_vs_Goal__c.field-meta.xml
<CustomField>
    <fullName>Progress_Bar_vs_Goal__c</fullName>
    <formula>IF(
  Handle_Time_vs_Goal__c&lt;1,
  IMAGE(&quot;/resource/Flowdometer__PrimaryBlue&quot; ,&quot;&quot;,10,100*Handle_Time_vs_Goal__c)+IMAGE( &quot;/resource/Flowdometer__UnusedGray&quot; ,&quot;&quot;,10,100*(1-Handle_Time_vs_Goal__c)),
&quot;Breached&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Bar vs Goal</label>
    <type>Text</type>
</CustomField>