force-app/main/default/objects/Flow__c/fields/Steps_in_Flow__c.field-meta.xml
<CustomField>
    <fullName>Steps_in_Flow__c</fullName>
    <label>Steps in Flow</label>
    <summaryForeignKey>Step__c.Flow__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>