force-app/main/default/objects/Flow__c/fields/Total_Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Handle_Time__c</fullName>
    <formula>IF( Most_Recent_Step__r.Terminal_Stage__c ,
  HandleTimeToCurrent__c,
  HandleTimeToCurrent__c + Most_Recent_Step__r.Step_Handle_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Time (days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>