force-app/main/default/objects/Flow__c/fields/Tracked_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Field_Name__c</fullName>
    <description>Specifies the field within the tracked object that the Flow is monitoring.</description>
    <inlineHelpText>API Name of the field where changes are tracked</inlineHelpText>
    <label>Tracked Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>