force-app/main/default/objects/Flow__c/fields/Tracked_Object__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Object__c</fullName>
    <description>Contains the name of the Salesforce object being tracked by the Flow, providing context to the tracked object ID.</description>
    <inlineHelpText>API Name of the Object being tracked</inlineHelpText>
    <label>Tracked Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>