force-app/main/default/objects/Flow__c/fields/Tracked_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Object_ID__c</fullName>
    <description>Holds the ID of the specific Salesforce record that the Flow is monitoring. Although the ID is raw, the type of object might be inferred through further lookup.</description>
    <inlineHelpText>ID of the Tracked Object instance</inlineHelpText>
    <label>Tracked Object ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>