force-app/main/default/objects/Flow__c/fields/Tracked_Object_Link__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Object_Link__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/&quot;+Tracked_Object__c+&quot;/&quot;+Tracked_Object_ID__c+&quot;/view&quot;, &quot;Tracked &quot;+ Tracked_Object__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracked Object Link</label>
    <type>Text</type>
</CustomField>