force-app/main/default/objects/Flow__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Optional field that classifies different flows to support diversified goal setting and tracking modes within the same object.</description>
    <inlineHelpText>Used to split different types of processes handled within the same object. If your process was held in an Onboarding object, you might have a Customer and Partner type of process, for example.</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>