force-app/main/default/objects/Flow__c/recordTypes/Goal.recordType-meta.xml
<RecordType>
    <fullName>Goal</fullName>
    <active>true</active>
    <label>Goal</label>
</RecordType>