force-app/main/default/objects/Flow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tracked_Object_Link__c</columns>
    <columns>Type__c</columns>
    <columns>isGoal__c</columns>
    <columns>Steps_in_Flow__c</columns>
    <columns>Total_Handle_Time__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>