force-app/main/default/objects/Flow__c/listViews/All_Trackers.listView-meta.xml
<ListView>
    <fullName>All_Trackers</fullName>
    <columns>NAME</columns>
    <columns>Name_of_Tracked_Record__c</columns>
    <columns>Tracked_Object__c</columns>
    <columns>Tracked_Field_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Steps_in_Flow__c</columns>
    <columns>Total_Handle_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Flow__c.Tracker</value>
    </filters>
    <label>All Trackers</label>
</ListView>