force-app/main/default/objects/Flow__c/listViews/Goals.listView-meta.xml
<ListView>
    <fullName>Goals</fullName>
    <columns>NAME</columns>
    <columns>Tracked_Object__c</columns>
    <columns>Tracked_Field_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Steps_in_Flow__c</columns>
    <columns>Total_Handle_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Flow__c.Goal</value>
    </filters>
    <label>Edit Goals</label>
</ListView>