force-app/main/default/objects/Flow__c/listViews/With_Goals.listView-meta.xml
<ListView>
    <fullName>With_Goals</fullName>
    <columns>NAME</columns>
    <columns>Goal__c</columns>
    <columns>Tracked_Object_Link__c</columns>
    <columns>Type__c</columns>
    <columns>Steps_in_Flow__c</columns>
    <columns>Total_Handle_Time__c</columns>
    <columns>Handle_Time_vs_Goal__c</columns>
    <columns>Progress_Bar_vs_Goal__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Goal__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Flow__c.Tracker</value>
    </filters>
    <label>Trackers with Goals</label>
</ListView>