force-app/main/default/objects/Flow__c/listViews/Without_Goals.listView-meta.xml
<ListView>
    <fullName>Without_Goals</fullName>
    <columns>NAME</columns>
    <columns>Tracked_Object__c</columns>
    <columns>Tracked_Field_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Steps_in_Flow__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Goal__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Flow__c.Tracker</value>
    </filters>
    <label>Trackers without Goals</label>
</ListView>